--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,19 +20,21 @@ tower-cookies = "0.10"
 wasm-bindgen = "=0.2.92"
 thiserror = "1"
 tracing = { version = "0.1", optional = true }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 http = "1"
 # serde
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_with = "3"
 strum_macros = "0.26"
+lazy-regex = "3"
+uuid = { version = "1", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
 anyhow = "1"
 serde_json = "1"
 tokio = "1"
-# httpc-test = { version = "0.1", features = ["color-output"] }
-httpc-test = { git = "https://github.com/CaoKha/rust-httpc-test-fix-no-color", features = ["color-output"] }
+httpc-test = { version = "0.1", features = ["color-output"] }
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
@@ -58,7 +60,7 @@ panic = "abort"
 
 [package.metadata.leptos]
 # The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
-output-name = "yogurt-web"
+output-name = "yogurt_web"
 
 # The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
 site-root = "target/site"
