--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+# Leptos - Axum 
 axum = { version = "0.7", optional = true }
 console_error_panic_hook = "0.1"
 leptos = { version = "0.6", features = ["nightly"] }
@@ -19,20 +20,57 @@ tower-http = { version = "0.5", features = ["fs"], optional = true }
 tower-cookies = "0.10"
 wasm-bindgen = "=0.2.92"
 thiserror = "1"
+# Tracing
 tracing = { version = "0.1", optional = true }
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", features = [
+  "env-filter",
+], optional = true }
 http = "1"
-# serde
+# Serde
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-serde_with = "3"
+serde_with = { version = "3", features = ["time_0_3"] }
 strum_macros = "0.26"
+# Sqlx
+sqlx = { version = "0.7", features = [
+  "runtime-tokio-rustls",
+  "postgres",
+  "uuid",
+  "time",
+], optional = true }
+sea-query = { version = "0.31.0-rc", optional = true }
+sea-query-binder = { version = "0.6.0-rc", features = [
+  "sqlx-postgres",
+  "with-uuid",
+  "with-time",
+], optional = true }
+modql = { version = "0.4.0-rc", features = ["with-sea-query"], optional = true }
+# Crypt & encoding
+rand = "0.8"
+hmac = "0.12"
+sha2 = "0.10"
+base64-url = "2"
+# -- JSON-RPC
+# Lock to specific version during 0.1.x
+rpc-router = { version = "=0.1.3", optional = true }
+# Others
+futures = "0.3"
 lazy-regex = "3"
+time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
 uuid = { version = "1", features = ["v4", "fast-rng"] }
+async-trait = "0.1"
+base64 = "0.22"
+derive_more = { version = "0.99" }
+enum_dispatch = "0.3"
+paste = "1"
+# -- Hashing (pwd-scheme02)
+argon2 = { version = "0.5", features = ["std"] }
+dotenv = { version = "0.15", optional = true } # "0.15"
 
 [dev-dependencies]
 anyhow = "1"
 serde_json = "1"
+serial_test = "3"
 tokio = "1"
 httpc-test = { version = "0.1", features = ["color-output"] }
 
@@ -48,7 +86,15 @@ ssr = [
   "leptos_meta/ssr",
   "leptos_router/ssr",
   "dep:tracing",
+  "dep:tracing-subscriber",
+  "dep:rpc-router",
+  "dep:sqlx",
+  "dep:sea-query",
+  "dep:sea-query-binder",
+  "dep:modql",
+  "dep:dotenv",
 ]
+
 
 # Defines a size-optimized profile for the WASM bundle in release mode
 [profile.wasm-release]
