--- a/yogurt-sim/Cargo.toml
+++ b/yogurt-sim/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { version = "0.13" }
+bevy = { version = "0.13"}
+
+[dev-dependencies]
+bevy = { version = "0.13", features = ["dynamic_linking"]}
 # rand = { version = "0.8.5" }
+
